--- a/src/app/components/activiti/activiti.component.html
+++ b/src/app/components/activiti/activiti.component.html
@@ -1,5 +1,5 @@
 <div class="activities-section">
-  <h2 class="section-title">HOẠT ĐỘNG HỌC TẬP TẠI DENGFU</h2>
+  <h2 class="section-title">HOẠT ĐỘNG HỌC TẬP TẠI DENGFUCHINESE EDUCATION</h2>
 
   <div class="activities-slider">
     <div class="slider-container">
