--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
     <div class="container">
       <!-- Logo section -->
       <div class="logo">
-        <img src="https://www.gdufs.edu.cn/images/logo.png" alt="GDUFS Logo">
+        <img src="../../../assets/logo/ngang3-removebg.png" alt="GDUFS Logo">
       </div>
 
       <!-- Main navigation -->
