--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -35,10 +35,9 @@
           <h3>LIÊN HỆ</h3>
           <h4>Thông tin liên lạc</h4>
           <div class="contact-info">
-            <p>Cơ sở Bạch Vân: Số 2 Đại lộ Bạch Vân Bắc, Quận Bạch Vân, Quảng Châu, Trung Quốc - 510420</p>
-            <p>Cơ sở Đại Học Thành: Khu Tiểu Cốc Vi, Thành phố Đại học Quảng Châu, Quận Phiên Ngung, Quảng Châu, Trung Quốc - 510006</p>
-            <p>Tổng đài: (020) 36207878</p>
-            <p>Điện thoại khẩn cấp: (020) 36206999</p>
+            <p>Cơ sở Huế: 154 Bà Triệu, Phường Xuân Phú, Quận Thuận Hoá, Thành Phố Huế, Việt Nam</p>
+            <p>Điện thoại: +84 789830123</p>
+            <p>Email: contact&#64;dengfuchinese.asia</p>
           </div>
           <div class="quick-links">
             <h4>Liên Kết Nhanh</h4>
@@ -58,10 +57,10 @@
   <div class="footer-bottom">
     <div class="container">
       <div class="footer-logo">
-        <img src="https://www.gdufs.edu.cn/images/footer_logo.png" alt="Logo GDUFS">
+        <img src="../../../assets/logo/ngang3-removebg.png" alt="Logo Dengfu">
       </div>
       <div class="copyright">
-        ©2022 Đại học Ngoại ngữ Quảng Đông | ICP số 06106464 | Bảo trì website: Trung tâm Công nghệ Giáo dục Hiện đại
+        ©{{currentYear}} Dengfu Chinese Education Center | ICP số 06106464 | Bảo trì website: Trung tâm Công nghệ HRS
       </div>
     </div>
   </div>
