--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,11 +4,8 @@
     <div class="container">
       <ul class="utility-nav">
         <li><a href="#"><i class="fas fa-envelope"></i> Email</a></li>
-        <li><a href="#"><i class="fas fa-book"></i> Thư Viện</a></li>
-        <li><a href="#"><i class="fas fa-calendar"></i> Lịch</a></li>
-        <li><a href="#"><i class="fas fa-user-graduate"></i> Cựu SV</a></li>
         <li><a href="#"><i class="fas fa-users"></i> Tuyển Dụng</a></li>
-        <li><a href="#"><i class="fas fa-cog"></i> Dịch Vụ</a></li>
+        <li><a href="#"><i class="fas fa-cog"></i> Quản trị</a></li>
       </ul>
     </div>
   </div>
