--- a/src/app/components/info-section/info-section.component.html
+++ b/src/app/components/info-section/info-section.component.html
@@ -2,7 +2,7 @@
   <div class="section-header">
     <h2 class="main-title">
       <span class="category">TUYỂN DỤNG</span>
-      <span class="title">Đăng ký và cơ hội việc làm</span>
+      <span class="title">Đăng ký khoá học và nhận tư vấn du học </span>
       <span class="underline"></span>
     </h2>
   </div>
@@ -56,7 +56,7 @@
       <div class="right-column">
         <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
           <h3 class="section-title" style="text-align: center">
-            ĐĂNG KÝ TƯ VẤN LỊCH KHAI GIẢNG THÁNG {{ currentMonth }}
+            ĐĂNG KÝ LỊCH KHAI GIẢNG THÁNG {{ currentMonth }}
           </h3>
           <div class="form-group">
             <input
