--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -5,8 +5,7 @@
     </div>
     <div class="bound">
       <div class="center-circle">
-        <h2>DengfuChinese</h2>
-        <p>Số liệu</p>
+        <img src="../../../assets/2.png" alt="logo">
       </div>
     </div>
     <div class="stat-items">
@@ -32,9 +31,7 @@
       </div>
     </div>
   </div>
-  <p class="content">
-    50 dự án nghệ thuật tự do lớn hàng đầu trong các trường đại học Trung Quốc
-    Trường đại học của chúng tôi xếp thứ 23 Môn Ngôn ngữ và Văn học Trung Quốc
-    bên ngoài trường của tôi đứng thứ ba trong cả nước Thứ 3 trong cả nước!
+  <p class="content" style="text-align: center;">
+    Hợp tác hơn 50 trường hàng đầu trung quốc và là cơ sở giảng dạy được bộ giáo dục và đào tao công nhận đảm bảo đầy đủ chất lượng đầy đủ trang thiết bị giảng dạy .
   </p>
 </div>
