--- a/src/app/components/statistics/statistics.component.css
+++ b/src/app/components/statistics/statistics.component.css
@@ -96,13 +96,13 @@
 }
 
 .bound .center-circle {
+  background: #003876;
   left: 50%;
   top: 70%;
   transform: translate(-50%, -50%);
   position: relative;
   width: 280px;
   height: 280px;
-  background-image: url("https://www.gdufs.edu.cn/images/container06_box.png");
   background-size: cover;
   background-position: center;
   border-radius: 50%;
@@ -113,6 +113,11 @@
   color: white;
   z-index: 2;
   box-shadow: 0 4px 15px rgba(0, 56, 118, 0.2);
+}
+
+.bound .center-circle img {
+  width: 100%;
+  height: 100%;
 }
 
 .bound .center-circle:before {
