--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="statistics-container">
-    <div class="logo">
+    <a class="logo" (click)="scrollToInfoSection()">
       <span>Đăng ký ngay</span>
-    </div>
+    </a>
     <div class="bound">
       <div class="center-circle">
         <img src="../../../assets/2.png" alt="logo">
