--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home">
   <app-slider></app-slider>
   <app-feature></app-feature>
-  <app-info-section></app-info-section>
+  <app-info-section id="info-section"></app-info-section>
   <app-statistics></app-statistics>
   <app-teacher-slider></app-teacher-slider>
   <app-feeling></app-feeling>
